@@ -1,3 +1,7 @@
+Wed Mar 26 08:47:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* addr2line.c (fill_lines): don't run fill_lines multiple times.
+
 Wed Mar 26 08:45:00 2014  Sam Rawlins  <sam.rawlins@gmail.com>
 
 	* internal.h: add prototype for rb_reg_search0
